# seismic-revm

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md
.github/: CODEOWNERS
.github/workflows/: bench.yml  book.yml  ci.yml  ethereum-tests.yml  release-plz.yml  seismic.yml
bins/revm-test/: Cargo.toml
bins/revme/: CHANGELOG.md  Cargo.toml  kstore_test.json  sstore_test.json  test.json
bins/revme/src/: cmd.rs
bins/revme/src/cmd/: evmrunner.rs  semantics.rs
bins/revme/src/cmd/bench/: analysis.rs  burntpix.rs
bins/revme/src/cmd/semantics/: compiler_evm_versions.rs  errors.rs  evm_handler.rs  file_handler.rs  parser.rs  semantic_tests.rs  test_cases.rs  utils.rs
bins/revme/src/cmd/statetest/: merkle_trie.rs  runner.rs
bins/revme/src/cmd/statetest/models/: eip7702.rs
book/src/: awesome.md
crates/bytecode/src/: opcode.rs
crates/context/interface/src/: cfg.rs  context.rs  journaled_state.rs  result.rs
crates/context/src/: cfg.rs  journal.rs  journaled_state.rs
crates/context/src/journal/: entry.rs  inner.rs
crates/context/src/journaled_state/: entry.rs
crates/database/interface/src/: async_db.rs  empty_db.rs  lib.rs
crates/database/src/: alloydb.rs  in_memory_db.rs
crates/database/src/states/: bundle_account.rs  bundle_state.rs  cache_account.rs  changes.rs  plain_account.rs  reverts.rs  state.rs  transition_account.rs
crates/handler/src/: execution.rs  frame.rs  handler.rs  mainnet_builder.rs  system_call.rs  validation.rs
crates/interpreter/: CHANGELOG.md  Cargo.toml
crates/interpreter/src/: host.rs  instruction_result.rs  opcode.rs
crates/interpreter/src/host/: dummy.rs
crates/interpreter/src/instructions/: contract.rs  data.rs  host.rs  macros.rs
crates/interpreter/src/interpreter/: stack.rs
crates/interpreter/src/interpreter_action/: call_inputs.rs
crates/op-revm/src/: handler.rs  precompiles.rs
crates/optimism/src/: l1block.rs  precompiles.rs
crates/optimism/src/api/: builder.rs
crates/precompile/: CHANGELOG.md  Cargo.toml
crates/precompile/src/: blake2.rs  lib.rs  secp256k1.rs
crates/primitives/: CHANGELOG.md  Cargo.toml
crates/primitives/src/: db.rs  eip7702.rs  env.rs  hardfork.rs  lib.rs  result.rs  specification.rs  state.rs
crates/primitives/src/db/: components.rs
crates/primitives/src/db/components/: state.rs
crates/primitives/src/eip7702/: authorization_list.rs
crates/primitives/src/env/: handler_cfg.rs
crates/revm/: CHANGELOG.md  Cargo.toml
crates/revm/src/: builder.rs  context.rs  db.rs  evm.rs  handler.rs  journaled_state.rs  lib.rs  seismic.rs
crates/revm/src/context/: context_precompiles.rs  evm_context.rs  inner_evm_context.rs
crates/revm/src/db/: alloydb.rs  emptydb.rs  ethersdb.rs  in_memory_db.rs
crates/revm/src/db/states/: bundle_account.rs  bundle_state.rs  cache_account.rs  changes.rs  plain_account.rs  reverts.rs  state.rs
crates/revm/src/handler/handle_types/: pre_execution.rs
crates/revm/src/optimism/: l1block.rs
crates/revm/src/seismic/: handler_register.rs  kernel.rs  rng.rs
crates/revm/src/seismic/eph_key/: aes_gcm_dec.rs  aes_gcm_enc.rs  derive_sym_key.rs  ecdh_derive_sym_key.rs  gen_secp256k1_keys.rs  hkdf_derive_sym_key.rs  mod.rs  secp256k1_eph.rs
crates/revm/src/seismic/eph_key/aes/: aes_gcm_dec.rs  aes_gcm_enc.rs  common.rs  mod.rs
crates/revm/src/seismic/kernel/: context.rs  kernel_interface.rs  mod.rs  test_environment_kernel.rs
crates/revm/src/seismic/precompiles/: ecdh_derive_sym_key.rs  hkdf_derive_sym_key.rs  mod.rs  rng.rs  secp256k1_sign.rs
crates/revm/src/seismic/precompiles/aes/: aes_gcm_dec.rs  aes_gcm_enc.rs  common.rs
crates/revm/src/seismic/precompiles/secp256k1/: keygen.rs  mod.rs  sign.rs
crates/revm/src/seismic/rng/: context.rs  domain_sep_rng.rs  env_hash.rs  helpers.rs  mod.rs  precompile.rs  rng_env.rs  test.rs
crates/seismic/: Cargo.toml  LICENSE
crates/seismic/src/: api.rs  chain.rs  evm.rs  handler.rs  instructions.rs  lib.rs  precompiles.rs  result.rs  rng_container.rs  spec.rs  storage.rs
crates/seismic/src/api/: builder.rs  default_ctx.rs  exec.rs
crates/seismic/src/chain/: rng_container.rs  seismic_chain.rs
crates/seismic/src/instructions/: confidential_storage.rs  instruction_provider.rs  macros.rs  seismic_host.rs
crates/seismic/src/precompiles/: ecdh_derive_sym_key.rs  hkdf_derive_sym_key.rs  mod.rs  rng.rs  secp256k1_sign.rs  stateful_precompile.rs
crates/seismic/src/precompiles/aes/: aes_gcm_dec.rs  aes_gcm_enc.rs  common.rs
crates/seismic/src/precompiles/rng/: domain_sep_rng.rs  precompile.rs  rng_container.rs  test.rs
crates/seismic/src/transaction/: abstraction.rs
crates/state/: Cargo.toml
crates/state/src/: lib.rs  types.rs
crates/wiring/src/: result.rs
documentation/src/: introduction.md
documentation/src/crates/revm/: handler.md
examples/cheatcode_inspector/src/: main.rs
examples/contract_deployment/src/: main.rs
examples/database_components/src/: lib.rs  state.rs
examples/erc20_gas/src/: handler.rs  main.rs
examples/uniswap_v2_usdc_swap/src/: main.rs
scripts/: seismic_gen_bytecode.sh  seismic_test_runner.sh
tests/seismic/sol/: AESDecrypt.sol  AESEncrypt.sol  AESEncryptAndDecryptWithRng.sol  AESEncryptThenDecrypt.sol  AddSuint.sol  AndSuint.sol  CStoreAndLoad.sol  CastToSuint.sol  CastToUint.sol  DeriveAESKey.sol  DivSuint.sol  DivideByZero.sol  EmitEncEvent.sol  EncryptedLogs.sol  EventHkdf.sol  ExpSuint.sol  FixedArraySuint.sol  GenSecp256k1.sol  KStoreAndLoad.sol  KStoreCheck.sol  LShiftSuint.sol  MappingSuint.sol  ModSuint.sol  MulSuint.sol  NotSuint.sol  OrSuint.sol  RShiftSuint.sol  RngPrecompile.sol  SStoreAndLoad.sol  SStoreCheck.sol  SaddressBasic.sol  Secp256k1Sign.sol  SubSuint.sol  SuintBasic.sol  UncheckedArithmetic.sol  XorSuint.sol  template.sol
