[package]
name = "revm-test"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.7"
hex = "0.4"
revm = { path = "../../crates/revm", default-features=false }
microbench = "0.5"
alloy-sol-macro = { path = "../../../seismic-alloy-core/crates/sol-macro" }
alloy-sol-types = { path = "../../../seismic-alloy-core/crates/sol-types" }
regex = "1.10.6"
eyre = "0.6.12"

[features]
seismic = ["alloy-sol-macro/seismic", "alloy-sol-types/seismic", "revm/seismic"]

[[bin]]
name = "analysis"

[[bin]]
name = "snailtracer"

[[bin]]
name = "transfer"

[[bin]]
name = "burntpix"
